// common.proto
syntax = "proto3";
package common;

option java_package = "com.zunf.tankbattletcpserver.common";
option java_outer_classname = "CommonProto";

// 统一的通用响应
message BaseResponse {
  int32 code = 1;         // 全局状态码，0=成功，非0失败
  string message = 2;     // 全局错误信息

  oneof data {
    bytes payload_bytes = 10;
  }
}