syntax = "proto3";
package auth;

import "common.proto";
option java_package = "com.zunf.tankbattletcpserver.grpc.server.auth";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc checkToken(CheckTokenRequest) returns (common.BaseResponse);
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  int64 player_id = 1; // 成功时返回
}
